add puppy picture and background color
co-authored-by: Riley Shimp <rilryshimp@gmail.com>

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <link href="css/styles.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-  
+  <h1>This Place Has Got Animals!!!</h1>
+  <img src="https://imagesvc.meredithcorp.io/v3/mm/image?q=85&c=sc&poi=face&w=2000&h=1000&url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F20%2F2019%2F01%2Fpuppies.jpg" alt="Pic of Pups" width=50%>
+  <p></p>
 </body>
 </html>
