add bootstrap stylesheet and other style elements

--- a/index.html
+++ b/index.html
@@ -2,27 +2,31 @@
 <html lang="en">
 <head>
   <title>Animal Shelter</title>
+  <link rel="stylesheet" href="css/bootstrap.css" type="text/css">
   <link href="css/styles.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-  <h1 class="mainheader">This Place Has Got Animals!!!</h1>
-  <img src="https://imagesvc.meredithcorp.io/v3/mm/image?q=85&c=sc&poi=face&w=2000&h=1000&url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F20%2F2019%2F01%2Fpuppies.jpg" alt="Pic of Pups" width=50%>
-  <p></p>
-  <h2>Here are the animals in stock:</h2>
-  <div class="column">
-    <h3>Frog</h3>
-    <img src="https://www.newportaquarium.com/-/media/Project/HFE/NAQ/Animals/Fish_Card.jpg?h=600&iar=0&w=600" alt="Frog">
-    <p>This is a frog. He hops around. Likes water.</p>
-  </div>
-  <div class="column">
-    <h3>Porcupine</h3>
-    <img src="https://www.popsci.com/uploads/2021/09/17/North-american-porcupine-sitting.jpg?auto=webp" alt="Porcupine">
-    <p>This guy is sharp!</p>
-  </div>
-  <div class="column">
-    <h3>Turtle</h3>
-    <img src="https://files.worldwildlife.org/wwfcmsprod/images/Sea_Turtle_Hol_Chan_Marine_Reserve_WW1105958/hero_small/5fv88fm3v6_Sea_Turtle_Hol_Chan_Marine_Reserve_WW1105958.jpg" alt="Turtle">
-    <p>What does this guy even do anyway? He is very slow. Fun to look at.</p>
+  <div class="container bg-success">
+    <h1 class="mainheader">Lil Bitey's <span class="exciting">Animal Shelter!!!</span> </h1>
+    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?q=85&c=sc&poi=face&w=2000&h=1000&url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F20%2F2019%2F01%2Fpuppies.jpg" alt="Pic of Pups">
+    <h2>Here are the <span class="exciting">animals in stock:</span></h2>
+    <div class="row">
+      <div class="col-4">
+        <h3>Frog</h3>
+        <img src="https://www.newportaquarium.com/-/media/Project/HFE/NAQ/Animals/Fish_Card.jpg?h=600&iar=0&w=600" alt="Frog">
+        <p>This is a frog. He hops around. Likes water.</p>
+      </div>
+      <div class="col-4">
+        <h3>Porcupine</h3>
+        <img src="https://www.popsci.com/uploads/2021/09/17/North-american-porcupine-sitting.jpg?auto=webp" alt="Porcupine">
+        <p>This guy is sharp!</p>
+      </div>
+      <div class="col-4">
+        <h3>Turtle</h3>
+        <img src="https://files.worldwildlife.org/wwfcmsprod/images/Sea_Turtle_Hol_Chan_Marine_Reserve_WW1105958/hero_small/5fv88fm3v6_Sea_Turtle_Hol_Chan_Marine_Reserve_WW1105958.jpg" alt="Turtle">
+        <p>What does this guy even do anyway? He is very slow. Fun to look at.</p>
+      </div>
+    </div>
   </div>
 </body>
 </html>
